# passive_detection

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README-Custom-Detector.md  README.md  __init__.py  annotate_abstracts.py  annotate_icle.py  annotate_merged_icle.py  compare_icle_datasets.py  compile_metrics.py  icle_analysis_summary.md  icle_datasets_comparison.md  implementation_improvements.md  my_passive_detector.py  passive_detection_comparison.md  passive_detection_metrics_summary.md  process_merged_icle.py  process_with_custom_detector.py  progress.md  pyproject.toml  requirements.txt  requirements_annotation.txt  sample_and_annotate.py
.github/workflows/: ci.yml
annotation_results/: statistics.txt
comparison_results/: metrics.txt
docs/source/: api.rst  conf.py  index.rst
scripts/: compare_annotations.py
src/: __init__.py
src/passive_detector/: __init__.py
src/passive_detector/core/: README.md  __init__.py  patterns.py
src/passivepy/: __init__.py
src/passivepy/analysis/: analyze_icle_anywords.py  analyze_icle_concordance.py  compare_implementations.py  compare_passivepy_custom_icle.py  compare_simple_passivepy_custom_icle.py  process_full_dataset.py
src/passivepy/core/: passive_voice_detector.py  simple_passivepy.py  types.py
src/passivepy/tests/: conftest.py  test_core.py  test_passive_patterns.py  test_passivepy.py
src/passivepy/utils/: direct_passivepy_check.py  fix_my_passive_detector.py  logging.py  run_passive_detector.py
