[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passivepy"
version = "0.1.0"
description = "A Python package for passive voice detection and analysis"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "spacy>=3.0.0",
    "spacy-transformers>=1.0.0",
    "torch>=2.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.0.200",
    "mypy>=0.900",
    "pre-commit>=3.0.0",
    "types-all>=0.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
testpaths = ["src/passivepy/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=passivepy --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true 